--- a/config/dataset.toml
+++ b/config/dataset.toml
@@ -6,5 +6,5 @@ resolution = 512
 
 [[datasets.subsets]]
 image_dir = '/training_data/dataset/teaching_data'
-caption_extension = '.caption'
+caption_extension = '.txt'
 num_repeats = 1
