--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 
-x-var1: &USE_GPU
+x-gpu: &USE_GPU
   deploy:
     resources:
       reservations:
@@ -10,25 +10,18 @@ x-var1: &USE_GPU
             capabilities: [gpu]
 
 services:
-  download:
-    build: ./services/download
-    volumes:
-      - ./cache:/cache
-  tag:
-    build: ./services/tag
-    environment:
-      - PYTHONPATH=/sd-scripts/library:$PYTHONPATH
-    volumes:
-      - ./cache:/cache
-      - ./services:/services
-      - ./training_data:/training_data
-    entrypoint: /bin/bash -c "eval poetry run $(cat /services/tag/config/run.command)"
   train:
     <<: *USE_GPU
-    build: services/train
+    build: .
+    image: cohakim/sd-scripts:latest
     shm_size: '2gb'
     volumes:
-      - ./cache:/cache
-      - ./services:/services
+      - sd-scripts:/sd-scripts
       - ./training_data:/training_data
-    entrypoint: /bin/bash -c "eval poetry run $(cat /services/train/config/run.command)"
+    entrypoint: |
+      /bin/bash -c "
+        eval poetry run $(cat /services/train/config/run.command)
+      "
+
+volumes:
+  sd-scripts:
