--- a/config/dataset.toml
+++ b/config/dataset.toml
@@ -1,10 +1,23 @@
 [general]
-enable_bucket = true
+enable_bucket     = true
+bucket_no_upscale = true
+shuffle_caption   = true
+caption_extension = '.txt'
+# caption_dropout_rate            = 0.0
+# caption_dropout_every_n_epoches = 0
+# caption_tag_dropout_rate        = 0.0
+# face_crop_aug_range             = None
+# token_warmup_min                = 1
+# token_warmup_step               = 0
+# is_reg                          = false
 
 [[datasets]]
-resolution = 512
+resolution      = 512
+random_crop     = false
+color_aug       = false
+flip_aug        = false
 
 [[datasets.subsets]]
-image_dir = '/training_data/dataset/teaching_data'
-caption_extension = '.txt'
-num_repeats = 1
+image_dir        = '/training_data/dataset/teaching_data'
+keep_tokens      = 1
+num_repeats      = 1
