--- a/config/config.toml
+++ b/config/config.toml
@@ -1,8 +1,8 @@
 
 [general_arguments]
-pretrained_model_name_or_path="/training_data/pretrained_model.safetensors"
+pretrained_model_name_or_path="/training_data/pretrained_models/anylora.safetensors"
 output_dir="/output"
-output_name="mylora"
+output_name="zundamon_v0.1"
 save_model_as="safetensors"
 network_module="networks.lora"
 persistent_data_loader_worker=true
@@ -22,4 +22,4 @@ lr_warmup_steps=0
 learning_rate=1e-4
 network_dim=128
 network_alpha=128
-max_train_epochs=1
+max_train_epochs=800
