--- a/config/dataset.toml
+++ b/config/dataset.toml
@@ -18,6 +18,6 @@ color_aug       = false
 flip_aug        = false
 
 [[datasets.subsets]]
-image_dir        = '/training_data/dataset/teaching_data'
+image_dir        = '/training_data/dataset/zundamon_v0.1'
 keep_tokens      = 1
 num_repeats      = 1
