--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,18 +18,18 @@ services:
     volumes:
       - huggingface_cache:/root/.cache/huggingface
       - ./config:/config
-      - ./training_data:/training_data
       - ./output:/output
+      - ./training_data:/training_data
     environment:
-      - DATASET=$DATASET
+      - DATASET
     entrypoint: |
       /bin/bash -c "
         poetry run accelerate launch \\
           --config_file accelerate.config \\
           --num_cpu_threads_per_process 1 \\
           train_network.py \\
-          --config_file=/training_data/dataset/$${DATASET}/config.toml \\
-          --dataset_config=/training_data/dataset/$${DATASET}/dataset.toml
+          --config_file=/training_data/datasets/$${DATASET}/config.toml \\
+          --dataset_config=/training_data/datasets/$${DATASET}/dataset.toml
       "
 
 volumes:
